--- a/vitoriav2.html
+++ b/vitoriav2.html
@@ -119,7 +119,7 @@
     <!-- Cole o link do Seu áudio Abaixo-->
     <audio class="plyr" src="https://minio-production-c185.up.railway.app/typebot/public/workspaces/cls53hzp60001qwv2c0iyw47k/typebots/cm4kaay230007i3s1oju1nu09/blocks/geedmuf1ldq4oyovwsktcu3l?v=1759082590278"></audio>
     <!-- Cole o link da Sua imagem Abaixo-->
-    <img src="https://i.ibb.co/tp1x8cKy/ZAP-1.png" alt="Imagem">
+    <img src="https://i.ibb.co/TqvHHv4k/prittigirl.jpg" alt="Imagem">
     <div class="microphone-icon">
       <i class="fas fa-microphone"></i>
     </div>
